# KimiK2Manim

./: .gitattributes  .gitignore  CLAUDE.md  README.md  __init__.py  kimi_client.py  logger.py  main.py  pyproject.toml  requirements.txt  run_dakota_agent.py  run_repo_viz_agent.py  setup.py  test_kimi_connection.py
BrownianMotion/: main.py  prompt.txt  pyproject.toml  run_pipeline.py
Dakota/: launch_kimi_visualization.py  manim_repo_scene.py  manim_scene.py  prompt.txt
agents/: enrichment_chain.py  enrichment_chain_kosong.py  prerequisite_explorer_kimi.py
docs/: KOSONG_REFACTORING.md  PYTHON_UPGRADE.md  pipeline_diagram_with_tools.tex  pipeline_diagram_with_tools.tikz
e2b_sandbox/: main.py
examples/: generate_harmonic_theorem.py  run_enrichment_pipeline.py  test_kimi_integration.py  test_qft_pipeline.py
manim_scenes/: epic_rhombicosidodecahedron.py  harmonic_theorem.py
media/Tex/: 1285055f9b3fa9d2.tex  333044bd4c21c9d8.tex  3f02f1cfee2a578b.tex  4c6d15258f2422c4.tex  5ba8cddc3df9803c.tex  66a310464412f115.tex  6c2bfd4ef3d74916.tex  71e55dd788e7f863.tex  853e0f034b9ed720.tex  8b67e3ab023f51c9.tex  8d1ec63d6a1ab25f.tex  954cf7dbb14c4947.tex  96d97111cf693954.tex  a58df28e894875b2.tex  c1d63bf921429e69.tex  df600dc546b709b8.tex  e13a4749b112f669.tex
media/videos/KimiNewton/1080p60/partial_movie_files/NewtonsSecondLawVisualization/: partial_movie_file_list.txt
media/videos/KimiNewton/480p15/partial_movie_files/NewtonsSecondLawVisualization/: partial_movie_file_list.txt
torus/: instructions.txt  run_pipeline.py
(+6 files in other folders)
