[project]
name = "kimik2manim"
version = "0.1.0"
description = "Kimi K2 thinking model integration for Manim animation generation"
requires-python = ">=3.13"
dependencies = [
    "kosong>=0.21.0",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
]
